--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,21 @@ repositories {
 
 dependencies {
 
-    implementation 'org.keycloak:keycloak-server-spi:24.0.5'
-    implementation 'org.keycloak:keycloak-services:24.0.5'
-    implementation 'org.keycloak:keycloak-server-spi-private:24.0.5'
+    compileOnly 'org.keycloak:keycloak-server-spi:24.0.5'
+    compileOnly 'org.keycloak:keycloak-server-spi-private:24.0.5'
+    compileOnly 'org.keycloak:keycloak-services:24.0.5'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testImplementation 'org.mockito:mockito-core:5.4.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
+    // Добавляем реализацию JAX-RS для тестов
+    testImplementation 'org.glassfish.jersey.core:jersey-common:3.1.0'
+}
+
+configurations {
+    testImplementation {
+        extendsFrom configurations.compileOnly
+    }
 }
 
 java {
